# forcefield-utilities

./: .gitignore  .pre-commit-config.yaml  README.md  environment-dev.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: CI.yaml
forcefield_utilities/: __init__.py  foyer_xml.py  gmso_xml.py  parameters_transformer.py  prepackaged.py  utils.py  xml_loader.py
forcefield_utilities/tests/: base_test.py  test_gmso_ff.py  test_gmso_xml.py  test_xml_loader.py  test_xml_params.py  utils.py
forcefield_utilities/tests/files/: bond-order.xml  pairpotential.xml  propanol_Mie_ua.xml  propanol_Mie_ua_duplicate_entries.xml  propanol_Mie_ua_duplicate_entries_angle_type.xml  propanol_Mie_ua_duplicate_entries_bond_type.xml  propanol_Mie_ua_duplicate_entries_dihedral_type.xml  propanol_Mie_ua_duplicate_entries_improper_type.xml  propanol_Mie_ua_list_params.xml  propanol_Mie_ua_list_wildcards.xml
